Minor edit to _base.scss to fix nav and header image gap.

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -11,7 +11,8 @@ html {
 body {
   margin: 0;
   // padding: 0;
-  padding: 51px 0 0;  // padding-top equal to masthead height or greater
+  // padding: 51px 0 0;  // padding-top equal to masthead height or greater
+  padding: 31px 0 0;  // padding-top equal to masthead height or greater
   color: $text-color;
   font-family: $global-font-family;
   line-height: 1.5;
@@ -19,6 +20,11 @@ body {
   &.overflow--hidden {
     /* when primary navigation is visible, the content in the background won't scroll */
     overflow: hidden;
+  }
+
+  @include breakpoint($large) {
+    // max-width: $large;
+    padding: 51px 0 0;  // padding-top equal to masthead height or greater
   }
 }
 
